--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
       <!-- Footer -->
       <footer class="credits">
-        <p>Made by Samuel Muwanguzi - ALT/SOE/025/4488</p>
+        <p>Done by Samuel Muwanguzi - ALT/SOE/025/4488</p>
       </footer>
     </div>
     <script src="script.js"></script>
